2025-04-30  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* po/de/web2c-help.po,
	* po/web2c-help.pot: Restore default behavior of generic CWEB.

2025-04-18  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.h,
	* common.h: Amend special characters.

2025-04-17  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-w2c.h,
	* common.c,
	* common.h,
	* ctang-w2c.ch,
	* ctangle.c,
	* ctangle.w: Make proper use of 'ishigh' macro.

2025-04-09  Andreas Scherer  <https://ascherer.github.io>

	* comm-bs.ch,
	* comm-mac.ch,
	* comm-mini.ch,
	* comm-w2c.ch,
	* comm-w2c.h,
	* comm-w32.ch,
	* common.bux,
	* common.c,
	* common.h,
	* common.w,
	* ctang-w2c.ch,
	* ctang-w32.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-hint.ch,
	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* ctwill.bux,
	* cweav-w2c.ch,
	* cweav-w32.ch,
	* cweave.w: Replace type 'boolean' with 'bool'.

2025-04-09  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* comm-w2c.h,
	* ctwill-mini.ch,
	* ctwill-w2c.ch: Revert bool change for C23.

2025-03-31  Andreas Scherer  <https://ascherer.github.io>

	* common.c,
	* ctangle.c,
	* ctangle.w: Discard trailing whitespace in macros.

2025-03-12  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* po/cweb.pot,
	* po/de/cweb.po,
	* po/it/cweb.po: Handle verbatim strings in TeX part.

2025-02-26  Andreas Scherer  <https://ascherer.github.io>

	* tests/ham-sorted.tex,
	* tests/ham.ch,
	* tests/ham.ref,
	* tests/ham.sref,
	* tests/ham.tex: Command-line option 'm' is no SGB variable.

2025-02-02  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch: Avoid several 'Overfull \vbox'es.

2025-01-29  Andreas Scherer  <https://ascherer.github.io>

	* tests/ham.ch: Add line information.

2025-01-15  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch: Don't mess with /PageLabels in CTWILL output.

2025-01-14  Andreas Scherer  <https://ascherer.github.io>
