@@ -7,7 +7,9 @@
 2025-04-18  Andreas Scherer  <https://ascherer.github.io>
 
 	* comm-w2c.h,
-	* common.h: Amend special characters.
+	* common.c,
+	* common.h,
+	* ctangle.c: Amend special characters.
 
 2025-04-17  Andreas Scherer  <https://ascherer.github.io>
 
